codepkg/objects/Global_Document_Configuration__mdt.object
<CustomObject>
    <description>Information about Destination Document on which we have to save the cloned document.</description>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <description>Name of Object on which Document need to get Copy</description>
        <inlineHelpText>Name of Object on which Document need to get Copy (__c)</inlineHelpText>
        <label>Destination Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Destination_Relationshi_Name__c</fullName>
        <description>Relationship Name of Object on Document Object</description>
        <inlineHelpText>Relationship Name of Object on Document Object(__r)</inlineHelpText>
        <label>Document-Destination Relationshi Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name_On_Destination_Object__c</fullName>
        <description>Name of Document on Destination Object</description>
        <inlineHelpText>Name of Document on Destination Object</inlineHelpText>
        <label>Document Name On Destination Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_To_Get_From_Destination_Objects__c</fullName>
        <description>Fields that you want to get from Destination Object</description>
        <inlineHelpText>Fields that you want to get from Destination Object</inlineHelpText>
        <label>Fields To Get From Destination Objects</label>
        <type>TextArea</type>
    </fields>
    <label>Global Document Configuration</label>
    <pluralLabel>Global Document Configurations</pluralLabel>
</CustomObject>